# pool

./: .env.example  .gitignore  README.md  config.example.yaml  poolMetaData.json  pyproject.toml  sjg-validation.json
data/universe/: nikkei225.csv
docs/: windows.md
scripts/windows/: Invoke-Autotrader.ps1  autotrader_task.bat
src/autotrader/: __init__.py  cli.py  config.py  logging_setup.py  market_calendar.py  portfolio.py  safety.py
src/autotrader/analysis/: __init__.py  _llm.py  advisor.py  candlestick.py  correlation.py  fundamental.py  market_regime.py  orderflow.py  sentiment.py  strength.py  technical.py
src/autotrader/backtest/: __init__.py  backtester.py  optimize.py  signal_eval.py
src/autotrader/broker/: __init__.py  base.py  kabus.py  paper.py
src/autotrader/data/: __init__.py  fundamentals.py  jquants.py  local_store.py  market_data.py  news.py  universe.py
src/autotrader/notify/: __init__.py  notifier.py
src/autotrader/strategy/: __init__.py  engine.py  proposal.py  review.py
tests/: conftest.py  test_advisor.py  test_backtest_correlation.py  test_candlestick.py  test_config.py  test_correlation.py  test_fundamental.py  test_jquants.py  test_kabus.py  test_leverage.py  test_local_store.py  test_market_calendar.py  test_optimize.py  test_orderflow.py  test_paper_broker.py  test_review.py  test_safety.py  test_strategy.py  test_strength.py  test_technical.py  test_trailing_stop.py  test_universe.py
tools/: build_universe.py
