[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autotrader"
version = "0.1.0"
description = "日本株の自動売買アプリ（ファンダメンタル選定＋テクニカル解析＋ニュース/SNSセンチメント）"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "pyyaml>=6.0",
    "requests>=2.31",
    "python-dotenv>=1.0",
    # 外部データ・LLMは任意。未導入でもコアロジック/テストは動く（遅延インポート）。
    "yfinance>=0.2.40",
    "anthropic>=0.40",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
]
# 日本の祝日判定（営業日ゲート用。未導入でも土日・年末年始は判定される）
jp = [
    "jpholiday>=0.1",
]

[project.scripts]
autotrader = "autotrader.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
